--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="pulse_oximeter">Pulse Oximeter</string>
     <string name="ecg_recorder">ECG Recorder</string>
     <string name="daily_check">Daily Check</string>
+    <string name="glucose_meters">Glucose meter</string>
 </resources>
